--- a/style.css
+++ b/style.css
@@ -8,3 +8,25 @@
     border-radius: 0.4rem;
     
 }
+.myContainer{
+    flex-direction: column;
+    width: 20rem;
+    margin: 0 auto;
+    gap: 2rem;
+}
+table{
+    margin: 2rem auto;
+}
+.tabaleHeader{
+
+    background-color: rgb(179, 179, 175);
+    
+}
+.tabaleHeader th{
+    text-align: center;
+}
+.tableTasks td{
+    border-left: 2px solid black;
+    border-bottom: 2px solid black;
+    text-align: center;
+}
