--- a/style.css
+++ b/style.css
@@ -30,3 +30,108 @@ table{
     border-bottom: 2px solid black;
     text-align: center;
 }
+.basketContainer{
+    display: flex;
+    flex-direction: column;
+}
+/* .myProduct{
+    padding: 0 2rem;
+} */
+.box-shopping{
+    display: flex;
+    flex-direction: column;
+        display: flex;
+        flex-direction: column;
+        /* gap: 1rem; */
+        background-color: #f8f9fa;
+        box-shadow: 0 0 10px #adb5bd;
+        border-radius: 0.4rem;
+}
+.myProduct-image{
+    width: 20rem;
+    /* text-align: center; */
+    margin: 1rem auto;
+}
+.myProduct-title{
+    text-align: center;
+    margin: 1rem;
+}
+.myProduct-price{
+    text-align: center;
+}
+.myProduct-btn{
+    width: 6rem;
+    margin: 1rem auto;
+}
+.shoppingContainer{
+    margin: 5rem;
+}
+.basketIcon{
+    position: relative;
+    margin: 0 auto;
+    cursor: pointer;
+}
+a{
+    color: black;
+}
+.shoppingBasket-icon::after{
+    content: "";
+    position: absolute;
+    top: -6px;
+    left: 6px;
+    background-color: red;
+    width: 10px;
+    height: 10px;
+    border: none;
+    border-radius: 50%;
+    color: white;
+
+}
+.basketBox{
+    display: flex;
+    flex-direction: column;
+}
+.basketshop-count{
+    text-align: center;
+    background-color: red;
+    color: white;
+    border-radius: 2rem;
+    width: 2rem;
+    margin: 0 auto;
+}
+.basketshop-title{
+    text-align: center;
+}
+.basketshop-price{
+    text-align: center;
+}
+.shopBasketBox{
+   display: flex;
+   flex-direction: column;
+   margin: 2rem auto;
+   padding: 2rem;
+    background-color: white;
+    box-shadow: 0 0 10px #adb5bd;
+}
+.basketshop-image{
+   width: 5rem;
+   margin: 0 auto;
+}
+.allProductShoppingBasket{
+    display: none;
+}
+.randomWordBox{
+    display: flex;
+    flex-direction: column;
+}
+.randomWordBox-input{
+    width: 20rem;
+    margin: 1rem auto;
+}
+.randomWordBox-btn{
+    width: 20rem;
+    margin: 1rem auto;
+}
+.randomWordBox-text{
+    text-align: center;
+}
