--- a/style.css
+++ b/style.css
@@ -151,3 +151,15 @@ td,th{
 .myStarMouse{
     position: absolute;
 }
+.ballSize{
+    font-size: 2rem;
+}
+.ballContainer{
+    margin-top: 5rem;
+    width: 100%;
+    height: 10rem;
+    position: relative;
+}
+.basketballIcon{
+    position: absolute;
+}
