--- a/style.css
+++ b/style.css
@@ -172,4 +172,26 @@ td,th{
     gap: 1rem;
     
 }
+.mathGameBox{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 3rem;
 
+}
+.mathContainer{
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+}
+.mathBtn{
+    width: 15rem;
+    /* background-color: #0070ff; */
+    border: none;
+    background: linear-gradient(to right, #0070ff 100%, white 0%);
+    box-shadow: 0 0 6px #636464;
+}
+.mathIcons{
+    font-size: 3rem;
+    font-weight: bold;
+}
